# sh-zoro

./: .gitignore  Brewfile  LICENSE  Makefile  README.md  pyproject.toml
roronoa/embeddings/: embed.py
utils/: csv_to_jsonl.py
